aws/projects/001-roman-numerals-converter/cloudformation romen-numerals-converter-1.yml
AWSTemplateFormatVersion: 2010-09-09

Description:
  CloudFormation Template for Romen Numerals Converter Static Website on EC2.
  This template deploys Romen Numerals Converter Static Website on Amazon Linux 2
  (ami-0c94855ba95c71c99) EC2 Instance with custom security group
  allowing http connections on port 80. Romen Numerals Converter Website
  is downloaded from Github repository, then deployed on Apache Web Server.
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type. Please select an instance type
    Default: t2.micro
    Type: String
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.medium
      - m1.large
      - m1.xlarge
      - m2.xlarge
      - m2.2xlarge
      - m2.4xlarge
      - m3.xlarge
      - m3.2xlarge
      - c1.medium
      - c1.xlarge
      - cc1.4xlarge
      - cc2.8xlarge
      - cg1.4xlarge
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Flask Web Server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c94855ba95c71c99
      InstanceType: !Ref InstanceType
      KeyName: R
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install python3 -y
          pip3 install flask
          wget -P templates https://raw.githubusercontent.com/rmzturkmen/Clarusway-aws-devops-workshop/master/aws/projects/001-roman-numerals-converter/templates/index.html
          wget -P templates https://raw.githubusercontent.com/rmzturkmen/Clarusway-aws-devops-workshop/master/aws/projects/001-roman-numerals-converter/templates/result.html
          wget https://raw.githubusercontent.com/rmzturkmen/Clarusway-aws-devops-workshop/master/aws/projects/001-roman-numerals-converter/romen-numerals-converter.py
          python3 romen-numerals-converter.py
Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Converter Decimal number to Romen numerals Application URL
